feature/58349-skripty-vkladat-aj-v-editore-stranok (#165)
* [58349] feat: scripts - include in PB editor option

* [58349] feat: tests

* [58349] chore: fix typo

* [58349] feat: docs for RO user, fix tests, fix PUBLIC node RO perms

* [58349] chore: code review

* [58349] chore: code review